Changelog
=========

4.5.1 (unreleased)
------------------

- Nothing changed yet.


4.5.0 (2019-09-26)
------------------

- OPAC search: Also query SWB. #FLOW-650
- Support for new content types. #FLOW-649


4.4.0 (2019-06-05)
------------------

- Footer: Only show BSB logo. #FLOW-434
- RSS: Limit search results to maximum number of items we're returning.
  #FLOW-198
- Social Media Buttons: Moved to their own viewlet and updated markup. #FLOW-439
- Support for multipart titles. #FLOW-520


4.3.5 (2018-12-12)
------------------

- Include subtitle in titleOrShortname index. Refs #REC-981
- Registration: Added reference to data protection statement. #REC-991
- Updated DDCs. #REC-983


4.3.4 (2018-05-25)
------------------

- Moved "Datenschutz" link to footer. Refs #17066


4.3.3 (2018-03-05)
------------------

- Also hide captcha etc. from user-information. Refs #16160
  [reinhardt]


4.3.2 (2018-01-18)
------------------

- Upgraded to dara schema 4.0. Refs #16169
  [reinhardt]
- Added social media buttons. Refs #16159
  [reinhardt]


4.3.1 (2017-11-16)
------------------

- Added setting for disabling thematic search section. Refs #16044
  [reinhardt]
- Added setting for Chronicon file name prefix. Refs #16093
  [reinhardt]
- Patched pyPdf to fix infinite loop. Refs #16076
  [reinhardt]


4.3.0 (2017-09-21)
------------------

- Added custom logo link that points to navigation root. Refs #15816
  [reinhardt]
- Also index e-book fields. Refs #15676
  [reinhardt]
- Dara-XML: Don't include empty ISBN or relations elements. Refs #15178
  [reinhardt]
- Export: Fixed MemoryError. Refs #15689
  [reinhardt]
- Dynamic portal title in comments viewlet. Refs #15699
  [reinhardt]


4.2.1 (2017-06-12)
------------------

- Allow running export after 6 days. Time between end of export and start of
  next export is always less than 7 days. Refs #15191
  [reinhardt]
- More unicode handling in newsletter. Refs #15075
  [reinhardt]